Fix for wrongly initialized globals.