@@ -31,6 +31,7 @@ package com.oracle.truffle.llvm;
 
 import java.io.IOException;
 import java.nio.ByteBuffer;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayDeque;
@@ -53,7 +54,6 @@ import com.oracle.truffle.api.CompilerDirectives;
 import com.oracle.truffle.api.CompilerDirectives.TruffleBoundary;
 import com.oracle.truffle.api.RootCallTarget;
 import com.oracle.truffle.api.Truffle;
-import com.oracle.truffle.api.TruffleFile;
 import com.oracle.truffle.api.TruffleLanguage.Env;
 import com.oracle.truffle.api.dsl.Cached;
 import com.oracle.truffle.api.dsl.Specialization;
@@ -74,7 +74,6 @@ import com.oracle.truffle.llvm.RunnerFactory.SulongLibraryMessageResolutionFacto
 import com.oracle.truffle.llvm.RunnerFactory.SulongLibraryMessageResolutionFactory.LookupNodeGen;
 import com.oracle.truffle.llvm.nodes.func.LLVMGlobalRootNode;
 import com.oracle.truffle.llvm.nodes.others.LLVMStaticInitsBlockNode;
-import com.oracle.truffle.llvm.parser.GetStackSpaceFactory;
 import com.oracle.truffle.llvm.parser.LLVMParser;
 import com.oracle.truffle.llvm.parser.LLVMParserResult;
 import com.oracle.truffle.llvm.parser.LLVMParserRuntime;
@@ -324,7 +323,7 @@ public final class Runner {
         }
     }
 
-    private ParserInput getParserData(Source source) {
+    private static ParserInput getParserData(Source source) {
         ByteBuffer bytes;
         ExternalLibrary library;
         if (source.getMimeType().equals(LLVMLanguage.LLVM_BITCODE_BASE64_MIME_TYPE)) {
@@ -523,8 +522,8 @@ public final class Runner {
         Path path = lib.getPath();
         byte[] bytes;
         try {
-            bytes = context.getEnv().getTruffleFile(path.toString()).readAllBytes();
-        } catch (IOException | SecurityException | OutOfMemoryError ex) {
+            bytes = Files.readAllBytes(path);
+        } catch (IOException ex) {
             throw new LLVMParserException("Error reading file " + path + ".");
         }
         // at the moment, we don't need the bitcode as the content of the source
@@ -774,7 +773,7 @@ public final class Runner {
     private RootCallTarget createGlobalVariableInitializer(LLVMParserResult parserResult) {
         FrameDescriptor rootFrame = StackManager.createRootFrame();
         LLVMParserRuntime runtime = parserResult.getRuntime();
-        LLVMSymbolReadResolver symbolResolver = new LLVMSymbolReadResolver(runtime, rootFrame, GetStackSpaceFactory.createAllocaFactory());
+        LLVMSymbolReadResolver symbolResolver = new LLVMSymbolReadResolver(runtime, rootFrame);
         final List<LLVMStatementNode> globalNodes = new ArrayList<>();
         for (GlobalVariable global : parserResult.getDefinedGlobals()) {
             final LLVMStatementNode store = createGlobalInitialization(runtime, symbolResolver, global);
@@ -890,11 +889,14 @@ public final class Runner {
         return Base64.getDecoder().decode(result);
     }
 
-    private ByteBuffer read(String filename) {
+    private static ByteBuffer read(String filename) {
+        return read(Paths.get(filename));
+    }
+
+    private static ByteBuffer read(Path path) {
         try {
-            TruffleFile truffleFile = context.getEnv().getTruffleFile(filename);
-            return ByteBuffer.wrap(truffleFile.readAllBytes());
-        } catch (IOException | SecurityException | OutOfMemoryError ignore) {
+            return ByteBuffer.wrap(Files.readAllBytes(path));
+        } catch (IOException ignore) {
             return ByteBuffer.allocate(0);
         }
     }
